# sqlens

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
.sqlx/: query-0b56a1eab71d1b232e528f52bf31361bc5a495c3f7eb38581754c25abe48d441.json  query-12a263997d6beba06a003d78dc35b651286d161361136a1dda8931308793c840.json  query-4f6e4ca60f92d57dd2bbb89e4cdeb45678596c7f12fc56cd06dbf8e2472b63c4.json  query-5d1f60a303d60db0156ebb5a9f81eac42978e4f1b24b0cf4016170b67617e0de.json  query-a8271fbc63c92604e0e0c1a55d91164128cfc7572301c4c8b65d7c160ef94427.json  query-da8696950c8b485d752050a56ebbd661d37ba5e7ba5999a8bc73051c666f6ba0.json
migrations/: 20250528225609_initialize-stats-table.sql
src/: main.rs
src/database/: handler.rs
src/executor/: handler.rs  processor.rs
src/proxy/: handler.rs  info.rs  mod.rs  processor.rs  query_tracker.rs  tcp.rs
src/server/: metrics.rs  mod.rs  reporter.rs
