[package]
name = "sqlens"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { version = "1.0.98" }
async-trait = "0.1.88"
futures = "0.3.31"
lazy_static = { version = "1.5.0" }
clap = { version = "4.5.39", features = ["derive"] }
pg_query = "6.1.1"

